# pero-mcp-server

./: .env.example  .gitignore  README.md  __main__.py  index.js  package.json  pero_mcp_server.py  pyproject.toml  requirements.txt
.github/: release-changelog-config.json
.github/workflows/: publish.yml
clients/: __init__.py  i_mcp_client.py  mcp_client_interface.py  mcp_handler_interface.py
clients/appstoreconnect/: __init__.py  appstore_connect_mcp_client.py  models.py
clients/appstoreconnect/handlers/: __init__.py  analytics_handler.py  app_handler.py  configure_handler.py  device_handler.py  localization_handler.py  testflight_handler.py  user_handler.py
clients/appstoreconnect/models/: __init__.py  analytics.py  app.py  config.py  device.py  localization.py  task.py  testflight.py  user.py
clients/googleplay/: __init__.py  googleplay_mcp_client.py
clients/googleplay/handlers/: __init__.py  financial_handler.py  sales_handler.py
clients/googleplay/models/: __init__.py  config.py
clients/ssh/: __init__.py  ssh_mcp_client.py
