[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pero-mcp-server"
dynamic = ["version"]
description = "pero-mcp-server is a server implementation of the Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "peropero", email = "tech@peropero.net"},
]
maintainers = [
    {name = "peropero", email = "tech@peropero.net"},
]
keywords = ["mcp", "model-context-protocol", "app-store-connect", "ssh", "automation", "api", "server"]

dependencies = [
    "fastmcp",
    "paramiko",
    "requests",
    "cryptography",
    "pydantic",
    "python-dotenv",
    "PyJWT",
    "typing-extensions",
]

[project.scripts]
main = "__main__:main"

[project.urls]
Homepage = "https://github.com/peroperogames/pero-mcp-server"
Documentation = "https://github.com/peroperogames/pero-mcp-server#readme"
Repository = "https://github.com/peroperogames/pero-mcp-server"
"Bug Tracker" = "https://github.com/peroperogames/pero-mcp-server/issues"

[tool.setuptools]
packages = ["clients", "clients.appstoreconnect", "clients.ssh"]
py-modules = ["pero_mcp_server", "__main__"]
